cleanup planets with precise density measurements

--- a/densitytable.tex
+++ b/densitytable.tex
@@ -1,34 +1,28 @@
 \capstartfalse
-\begin{deluxetable*}{lcccccccc}
+\begin{deluxetable*}{lccccccc}
 \tabletypesize{\small}
 \tablecaption{Planets with $\geq 3\sigma$ bulk density measurements around low mass stars\label{table:rhop}}
-\tablehead{Planet & $P$ & $F$ & $r_p$ & $m_p$ & $\rho_p$ & Method & Composition & Refs. \\
-name & $[$days$]$ & $[\text{F}_{\oplus}]$ & $[\text{R}_{\oplus}]$ & $[\text{M}_{\oplus}]$ & $[\text{g cm}^{-3}]$ && disposition & }
+\tablehead{Planet & $P$ & $F$ & $r_p$ & $m_p$ & $\rho_p$ & Composition & Refs. \\
+name & $[$days$]$ & $[$F$_{\oplus}]$ & $[$R$_{\oplus}]$ & $[$M$_{\oplus}]$ & $[$g cm$^{-3}]$ & disposition & }
 \startdata
-GJ 143b & 35.61253 & 5.5 & 2.61 & 22.70 & 7.09 & RV & Rock & 1 \\
-GJ 357b & 3.93072 & 13.2 & 1.22 & 1.84 & 5.67 & RV & Rock & 2 \\
-GJ 1132b & 1.62892 & 19.4 & 1.13 & 1.66 & 6.39 & RV & Rock & 3,4 \\
-GJ 1214b & 1.58040 & 22.2 & 2.85 & 6.26 & 1.50 & RV & Gas & 5 \\
-GJ 4332b & 1.40150 & 144.2 & 1.39 & 4.60 & 9.51 & RV & Rock & 6 \\
-GJ 9827b & 1.20898 & 326.9 & 1.58 & 4.91 & 6.95 & RV & Rock & 7 \\
-GJ 9827d & 6.20147 & 37.0 & 2.02 & 4.04 & 2.71 & RV & Am & 7 \\
-HD 219134b & 3.09293 & 176.7 & 1.60 & 4.74 & 6.40 & RV & Rock & 8 \\
-HD 219134c & 6.76458 & 62.3 & 1.51 & 4.36 & 7.01 & RV & Rock & 8 \\
-K2-18b & 32.93962 & 1.2 & 2.71 & 8.63 & 2.40 & RV & Gas & 9,10 \\
-K2-146b & 2.64460 & 19.2 & 2.05 & 5.77 & 3.72 & TTV & Am & 11 \\
-K2-146c & 4.00498 & 11.0 & 2.19 & 7.49 & 3.96 & TTV & Am & 11 \\
-K2-216b & 2.17480 & 1837.4 & 1.75 & 8.00 & 8.28 & RV & Rock & 12 \\
-Kepler-80b & 7.05246 & 41.8 & 2.67 & 6.93 & 2.02 & TTV & Gas & 13 \\
-Kepler-80c & 9.52355 & 28.0 & 2.74 & 6.74 & 1.82 & TTV & Gas & 13 \\
-Kepler-80d & 3.07222 & 126.5 & 1.53 & 6.75 & 10.46 & TTV & Rock & 13 \\
-Kepler-80e & 4.64489 & 72.9 & 1.60 & 4.13 & 5.60 & TTV & Rock & 13 \\
-L 98-59c & 3.69040 & 11.9 & 1.35 & 2.46 & 5.55 & RV & Rock & 14,15 \\
-LHS 1140b & 24.73696 & 0.5 & 1.73 & 6.98 & 7.52 & RV & Rock & 16 \\
-LHS 1140c & 3.77793 & 6.1 & 1.28 & 1.81 & 4.77 & RV & Rock & 16
+GJ 357b & 3.93072 & 13.2$\pm$ 1.4 & 1.22$\pm$ 0.08 & 1.84$\pm$ 0.31 & 5.67$^{+1.75}_{-1.35}$ & Ter & \\
+GJ 1132b & 1.62892 & 19.4$\pm$ 4.0 & 1.13$\pm$ 0.06 & 1.66$\pm$ 0.23 & 6.39$^{+1.36}_{-1.30}$ & Ter & \\
+GJ 1214b & 1.58040 & 22.2$\pm$ 3.0 & 2.85$\pm$ 0.20 & 6.26$\pm$ 0.86 & 1.50$^{+0.44}_{-0.34}$ & Gas & \\
+GJ 4332b & 1.40150 & 144.2$\pm$ 12.0 & 1.39$\pm$ 0.09 & 4.60$\pm$ 0.60 & 9.51$^{+2.53}_{-2.11}$ & Ter & \\
+GJ 9827b & 1.20898 & 326.9$\pm$ 16.3 & 1.58$\pm$ 0.03 & 4.91$\pm$ 0.49 & 6.95$^{+0.81}_{-0.71}$ & Ter & \\
+GJ 9827c & 6.20147 & 37.0$\pm$ 1.8 & 2.02$\pm$ 0.05 & 4.04$\pm$ 0.84 & 2.71$^{+0.57}_{-0.55}$ & Am & \\
+HD 219134b & 3.09293 & 176.7$\pm$ 5.5 & 1.60$\pm$ 0.06 & 4.74$\pm$ 0.19 & 6.40$^{+0.75}_{-0.69}$ & Ter & \\
+HD 219134c & 6.76458 & 62.3$\pm$ 1.9 & 1.51$\pm$ 0.05 & 4.36$\pm$ 0.22 & 7.01$^{+0.83}_{-0.71}$ & Ter & \\
+K2-18b & 32.93962 & 1.2$\pm$ 0.1 & 2.71$\pm$ 0.07 & 8.63$\pm$ 1.35 & 2.40$^{+0.41}_{-0.40}$ & Gas & \\
+K2-146b & 2.64460 & 19.2$\pm$ 2.0 & 2.05$\pm$ 0.06 & 5.77$\pm$ 0.18 & 3.72$^{+0.34}_{-0.30}$ & Am & \\
+K2-146c & 4.00498 & 11.0$\pm$ 1.1 & 2.19$\pm$ 0.07 & 7.49$\pm$ 0.24 & 3.96$^{+0.38}_{-0.38}$ & Am & \\
+Kepler-80b & 7.05246 & 41.8$\pm$ 4.8 & 2.67$\pm$ 0.10 & 6.93$\pm$ 0.70 & 2.02$^{+0.43}_{-0.35}$ & Gas & \\
+Kepler-80c & 9.52355 & 28.0$\pm$ 3.2 & 2.74$\pm$ 0.12 & 6.74$\pm$ 0.86 & 1.82$^{+0.45}_{-0.39}$ & Gas & \\
+Kepler-80d & 3.07222 & 126.5$\pm$ 14.5 & 1.53$\pm$ 0.09 & 6.75$\pm$ 0.51 & 10.46$^{+2.30}_{-2.04}$ & Ter & \\
+Kepler-80e & 4.64489 & 72.9$\pm$ 8.3 & 1.60$\pm$ 0.08 & 4.13$\pm$ 0.95 & 5.60$^{+1.54}_{-1.32}$ & Ter & \\
+L 98-59c & 3.69040 & 11.9$\pm$ 1.5 & 1.35$\pm$ 0.07 & 2.46$\pm$ 0.31 & 5.55$^{+1.22}_{-1.01}$ & Ter & \\
+LHS 1140b & 24.73696 & 0.5$\pm$ 0.0 & 1.73$\pm$ 0.03 & 6.98$\pm$ 0.89 & 7.52$^{+1.11}_{-1.06}$ & Ter & \\
+LHS 1140c & 3.77793 & 6.1$\pm$ 0.5 & 1.28$\pm$ 0.02 & 1.81$\pm$ 0.39 & 4.77$^{+1.09}_{-1.01}$ & Ter &
 \enddata
-\tablecomments{References: 1) \citealt{dragomir19} 2) \citealt{luque19} 3) \citealt{dittmann17b} 4) \citealt{bonfils18} 5) \citealt{harpsoe13} 
-6) Astudillo-Defru et al. in prep. 7) \citealt{rice19} 8) \citealt{gillon17}
-9) \citealt{benneke17} 10) \citealt{cloutier19a} 11) \citealt{hamann19} 12) \citealt{persson18} 13) \citealt{macdonald16}
-14) \citealt{kostov19} 15) \citealt{cloutier19c} 16) \citealt{ment19}.}
 \end{deluxetable*}
 \capstarttrue
