--- a/refs.bib
+++ b/refs.bib
@@ -25854,7 +25854,7 @@ archivePrefix = {arXiv},
 	unveiled by TESS}",
       journal = {ArXiv e-prints},
 archivePrefix = "arXiv",
-       eprint = {in prep.},
+       eprint = {submitted},
  primaryClass = "astro-ph.EP",
          year = 2019,
         month = jan,
