updated four figures to be interactive and removed bolded new text

--- a/radvalley.tex
+++ b/radvalley.tex
@@ -395,12 +395,12 @@ measurement uncertainties and with a fractional precision on $P$ inflated to 20\
 
 \begin{figure*}
   \centering
-  \includegraphics[width=\hsize]{figures/Ndetmap_map_Msgt0d0_xbin45_ybin27.png}%
+  %\includegraphics[width=\hsize]{figures/Ndetmap_map_Msgt0d0_xbin45_ybin27.png}%
   \hspace{-\hsize}%
   \begin{ocg}{fig:off4}{fig:off4}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on4}{fig:on4}{1}%
-  \includegraphics[width=\hsize]{figures/Ndetmap_kepk2_Msgt0d0_xbin45_ybin27.png}%
+  %\includegraphics[width=\hsize]{figures/Ndetmap_kepk2_Msgt0d0_xbin45_ybin27.png}%
   \end{ocg}
   \hspace{-\hsize}%
   \caption{(\emph{Interactive figure}) Empirical population of confirmed close-in planets around low mass stars.
@@ -694,30 +694,30 @@ occurrence rate of $2.83\pm 0.36$ planets per star.
 
 \begin{figure*}
   \centering
-  \includegraphics[width=\hsize]{figures/fmap_bkgd_Msgt0d0_xbin39_ybin26.png}%
+  %\includegraphics[width=\hsize]{figures/fmap_bkgd_Msgt0d0_xbin39_ybin26.png}%
   \hspace{-\hsize}%
   \begin{ocg}{fig:off3}{fig:off3}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on3}{fig:on3}{1}%
-  \includegraphics[width=\hsize]{figures/fmap_kepk2_Msgt0d0_xbin39_ybin26.png}%
+  %\includegraphics[width=\hsize]{figures/fmap_kepk2_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
   \hspace{-\hsize}%
   \begin{ocg}{fig:off1}{fig:off1}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on1}{fig:on1}{1}%
-  \includegraphics[width=\hsize]{figures/fmap_curve_Msgt0d0_xbin39_ybin26.png}%
+  %\includegraphics[width=\hsize]{figures/fmap_curve_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
   \hspace{-\hsize}%
   \begin{ocg}{fig:off4}{fig:off4}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on4}{fig:on4}{1}%
-  \includegraphics[width=\hsize]{figures/fmap_planets_Msgt0d0_xbin39_ybin26.png}%
+  %\includegraphics[width=\hsize]{figures/fmap_planets_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
   \hspace{-\hsize}%
   \caption{(\emph{Interactive figure}) Planet occurrence rate versus orbital period and planetary radius. The maximum a-posteriori occurrence
     rate map calculated from the population of confirmed planets from \kepler{} and
-    \ktwo{} \ToggleLayer{fig:on3,fig:off3}{\protect\cdbox{(\emph{circles and diamonds})}} around low mass dwarf
-    stars. For comparison, overplotted are the \ToggleLayer{fig:on1,fig:off1}{\protect\cdbox{empirical locations}}
+    \ktwo{} around low mass dwarf stars \ToggleLayer{fig:on3,fig:off3}{\protect\cdbox{(\emph{small circles and diamonds})}}.
+    For comparison, overplotted are the \ToggleLayer{fig:on1,fig:off1}{\protect\cdbox{empirical locations}}
     of the radius valley around FGK stars 
     characterized via asteroseismology \citep[\emph{dashed line},][]{vaneylen18} and the approximate radius
     valley around mid-K to early-M dwarfs \citep[\emph{dotted line},][]{wu19}. Also overplotted are
@@ -904,25 +904,47 @@ space yields $\text{d}r_p / \text{d}\log{P} = 0.085\pm 0.074$.
 
 \begin{figure*}
   \centering
-  %\includegraphics[width=.8\hsize]{figures/fmapF_Msgt0d0_xbin39_ybin26_insolation.png}
-  %\includegraphics[width=.8\hsize]{figures/fmapF_bkgd_Msgt0d0_xbin39_ybin26_insolation.png}%
-  \hspace{-\hsize}%
+  \includegraphics[width=0.85\hsize]{figures/fmapFmart_bkgd_Msgt0d0_xbin39_ybin26_insolation.png}%
+  \hspace{-0.85\hsize}%
   \begin{ocg}{fig:off1}{fig:off1}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on1}{fig:on1}{1}%
-  %\includegraphics[width=.8\hsize]{figures/fmapF_models_Msgt0d0_xbin39_ybin26_insolation.png}%
+  \includegraphics[width=0.85\hsize]{figures/fmapFmart_kepk2_Msgt0d0_xbin39_ybin26_insolation.png}%
   \end{ocg}
-  \hspace{-\hsize}%
-  %\includegraphics[width=.85\hsize]{figures_tmp/fmapF_martinez/fmapF_martinez001.png}
-  \caption{Planet occurrence rates versus insolation and planet radius around low mass and Sun-like stars.
+  \hspace{-0.85\hsize}%
+  \begin{ocg}{fig:off2}{fig:off2}{0}%
+  \end{ocg}%
+  \begin{ocg}{fig:on2}{fig:on2}{1}%
+  \includegraphics[width=0.85\hsize]{figures/fmapFmart_slope_Msgt0d0_xbin39_ybin26_insolation.png}%
+  \end{ocg}
+  \hspace{-0.85\hsize}%
+  \begin{ocg}{fig:off3}{fig:off3}{0}%
+  \end{ocg}%
+  \begin{ocg}{fig:on3}{fig:on3}{1}%
+  \includegraphics[width=0.85\hsize]{figures/fmapFmart_models_Msgt0d0_xbin39_ybin26_insolation.png}%
+  \end{ocg}
+  \hspace{-0.85\hsize}%
+  \begin{ocg}{fig:off4}{fig:off4}{0}%
+  \end{ocg}%
+  \begin{ocg}{fig:on4}{fig:on4}{1}%
+  \includegraphics[width=0.85\hsize]{figures/fmapFmart_planets_Msgt0d0_xbin39_ybin26_insolation.png}%
+  \end{ocg}
+  \hspace{-0.85\hsize}%
+  %\includegraphics[trim=0cm 0 0 -4cm, width=.85\hsize]{figures_tmp/fmapF_martinez/fmapF_martinez001.png}
+  \caption{(\emph{Interactive figure})
+    Planet occurrence rates versus insolation and planet radius around low mass and Sun-like stars.
     \emph{Upper panel}: the maximum a-posteriori occurrence
-    rate map calculated from the population of confirmed planets from \kepler{} (\emph{circles}) and
-    \ktwo{} (\emph{diamonds}) around low mass dwarf
-    stars. Overplotted in black are model predictions of the transition from rocky to non-rocky
+    rate map calculated from the population of confirmed planets from \kepler{} and
+    \ktwo{} around low mass dwarf stars
+    \ToggleLayer{fig:on1,fig:off1}{\protect\cdbox{(\emph{small circles and diamonds})}}.
+    Overplotted in black are
+    \ToggleLayer{fig:on3,fig:off3}{\protect\cdbox{model predictions}} of the transition from rocky to non-rocky
     planets in the following scenarios: core-powered mass loss \citep{gupta19b}, photoevaporation
-    \citep{lopez18}, and gas-poor formation \cite{lopez18}. We measure the slope of the radius valley
+    \citep{lopez18}, and gas-poor formation \cite{lopez18}. We measure the
+    \ToggleLayer{fig:on2,fig:off2}{\protect\cdbox{slope of the radius valley}}
     to be $\text{d}r_p / \text{d}\log{F} = -0.123\pm 0.054$ which is consistent with predictions
-    from gas-poor formation of terrestrial planets. Also overplotted are planets
+    from gas-poor formation of terrestrial planets. Also overplotted are
+    \ToggleLayer{fig:on4,fig:off4}{\protect\cdbox{planets}}
     with $\geq 3\sigma$ bulk density measurements from the literature that are classified as having either
     a rocky (\emph{circles}), a gaseous (\emph{triangles}), or an ambiguous (\emph{squares}) bulk
     composition. Marker colors are indicative of the MAP planet bulk densities.
@@ -1090,30 +1112,30 @@ rocky to non-rocky planets despite the latter being inherently rare around these
 
 \begin{figure*}
   \centering
-  \includegraphics[width=\hsize]{figures/rpvMsFULL_KepK2_bkgd.png}%
+  %\includegraphics[width=\hsize]{figures/rpvMsFULL_KepK2_bkgd.png}%
   \hspace{-\hsize}%
   \begin{ocg}{fig:off4}{fig:off4}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on4}{fig:on4}{1}%
-  \includegraphics[width=\hsize]{figures/rpvMsFULL_KepK2_models.png}%
+  %\includegraphics[width=\hsize]{figures/rpvMsFULL_KepK2_models.png}%
   \end{ocg}
   \hspace{-\hsize}%
   \begin{ocg}{fig:off1}{fig:off1}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on1}{fig:on1}{1}%
-  \includegraphics[width=\hsize]{figures/rpvMsFULL_KepK2_FP18.png}%
+  %\includegraphics[width=\hsize]{figures/rpvMsFULL_KepK2_FP18.png}%
   \end{ocg}
   \hspace{-\hsize}%
   \begin{ocg}{fig:off3}{fig:off3}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on3}{fig:on3}{1}%
-  \includegraphics[width=\hsize]{figures/rpvMsFULL_KepK2_bin.png}%
+  %\includegraphics[width=\hsize]{figures/rpvMsFULL_KepK2_bin.png}%
   \end{ocg}
   \hspace{-\hsize}%
   \begin{ocg}{fig:off2}{fig:off2}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on2}{fig:on2}{1}%
-  \includegraphics[width=\hsize]{figures/rpvMsFULL_KepK2_Ms.png}%
+  %\includegraphics[width=\hsize]{figures/rpvMsFULL_KepK2_Ms.png}%
   \end{ocg}
   \hspace{-\hsize}%
   \caption{(\emph{Interactive figure}) Evolution of the radius valley features with stellar mass. \emph{Solid markers}:
