--- a/refs.bib
+++ b/refs.bib
@@ -8012,7 +8012,7 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{gillon17,
+@ARTICLE{gillon17a,
    author = {{Gillon}, M. and {Triaud}, A.~H.~M.~J. and {Demory}, B.-O. and 
 	{Jehin}, E. and {Agol}, E. and {Deck}, K.~M. and {Lederer}, S.~M. and 
 	{de Wit}, J. and {Burdanov}, A. and {Ingalls}, J.~G. and {Bolmont}, E. and 
@@ -12613,30 +12613,6 @@ archivePrefix = "arXiv",
     pages = {221-224},
       doi = {10.1038/nature17448},
    adsurl = {http://adsabs.harvard.edu/abs/2016Natur.533..221G},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@ARTICLE{gillon17,
-   author = {{Gillon}, M. and {Triaud}, A.~H.~M.~J. and {Demory}, B.-O. and 
-	{Jehin}, E. and {Agol}, E. and {Deck}, K.~M. and {Lederer}, S.~M. and 
-	{de Wit}, J. and {Burdanov}, A. and {Ingalls}, J.~G. and {Bolmont}, E. and 
-	{Leconte}, J. and {Raymond}, S.~N. and {Selsis}, F. and {Turbet}, M. and 
-	{Barkaoui}, K. and {Burgasser}, A. and {Burleigh}, M.~R. and 
-	{Carey}, S.~J. and {Chaushev}, A. and {Copperwheat}, C.~M. and 
-	{Delrez}, L. and {Fernandes}, C.~S. and {Holdsworth}, D.~L. and 
-	{Kotze}, E.~J. and {Van Grootel}, V. and {Almleaky}, Y. and 
-	{Benkhaldoun}, Z. and {Magain}, P. and {Queloz}, D.},
-    title = "{Seven temperate terrestrial planets around the nearby ultracool dwarf star TRAPPIST-1}",
-  journal = {Nature},
-archivePrefix = "arXiv",
-   eprint = {1703.01424},
- primaryClass = "astro-ph.EP",
-     year = 2017,
-    month = feb,
-   volume = 542,
-    pages = {456-460},
-      doi = {10.1038/nature21360},
-   adsurl = {http://adsabs.harvard.edu/abs/2017Natur.542..456G},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
