created ascii table files and editted text

--- a/refs.bib
+++ b/refs.bib
@@ -25823,14 +25823,12 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{astudillodefru19,
-       author = {{Astudillo-Defru}, N. and {Wang}, S. and {Cloutier}, R. and 
+       author = {{Astudillo-Defru}, N. and {Cloutier}, R. and {Wang}, S. and 
 	{Teske}, J. and {Brahm}, R. and {Ricker}, G. and {Vanderspek}, R. and 
 	{Latham}, D. and {Seager}, S. and {Winn}, J. and {Jenkins}, J~M.},
-	title = "{A hot terrestrial planet orbiting the bright M dwarf GJ 4332 
+	title = "{A hot terrestrial planet orbiting the bright M dwarf L 168-9 
 	unveiled by TESS}",
-      journal = {ArXiv e-prints},
-archivePrefix = "arXiv",
-       eprint = {submitted},
+       eprint = {A\&A submitted},
  primaryClass = "astro-ph.EP",
          year = 2019,
         month = jan,
