--- a/radvalley.tex
+++ b/radvalley.tex
@@ -112,7 +112,7 @@ of Toronto, 50 St. George Street, Toronto, ON, M5S 3H4, Canada}
   core-powered mass loss, and gas-poor formation. %Although current measurements are
   %insufficient to robustly identify the dominant formation pathway of the radius valley,
   %such inferences may be obtained by \tess{} with $\mathcal{O}(85,000)$
-  %mid-to-late M dwarfs observed with 2 minute cadence.
+  %mid-to-late M dwarfs observed with 2-minute cadence.
   \textbf{The measurements presented herein precisely indicate the subset of planetary orbital periods and radii
     that should be targeted in radial velocity surveys to resolve the rocky to non-rocky transition
     around low mass stars.}  
@@ -120,6 +120,7 @@ of Toronto, 50 St. George Street, Toronto, ON, M5S 3H4, Canada}
 
 
 \section{Introduction}
+\textbf{?? ask dave about acknowledgement and abstract}
 NASA's \kepler{} space telescope has discovered thousands of exoplanets over its lifetime and
 consequently enabled robust investigations of the occurrence rate of planets within our galaxy.
 One striking outcome of such studies was that the so-called super-Earths and sub-Neptunes---whose
@@ -147,7 +148,7 @@ luminosity from a planetary core's primordial energy reservoir from formation dr
 over Gyr timescales \citep{ginzburg18,gupta19a,gupta19b}.
 Impact erosion by planetesimals may also drive the emergence of the radius valley either by atmospheric
 stripping or by the growth of volatile-rich secondary atmospheres \citep{shuvalov09,schlichting15,wyatt19}. 
-An alternative explanation to the processing of primorial atmospheres is the formation of distinct rocky and
+An alternative explanation to the processing of primordial atmospheres is the formation of distinct rocky and
 non-rocky planet populations with the former invoking gas-poor formation wherein gas accretion is delayed
 by dynamical friction whilst the
 planetary core is still embedded within the protoplanetary disk until a point at which the gaseous disk
@@ -184,7 +185,7 @@ with stellar mass can allude to which process---if any---dominates the evolution
 
 \begin{figure}
   \centering
-  %\includegraphics[width=0.98\hsize]{figures/Bergerplanethist.png}
+  \includegraphics[width=0.98\hsize]{figures/Bergerplanethist.png}
   \caption{Empirical distributions of \kepler{} planet radii. Histograms of \kepler{} planet radii
     from \cite{berger18} for planets with host stellar effective temperatures \teff{} $\in [4700,6500]$ K
     (\emph{blue}) and \teff{} $<4700$ K (\emph{red}). The former subset of 2816 planets corresponds to the
@@ -267,7 +268,7 @@ $M_s$ is $\sim 5.5$\%.
 
 \begin{figure}
   \centering
-  %\includegraphics[width=0.98\hsize]{figures/stellar_corner_KepandK2.png}
+  \includegraphics[width=0.98\hsize]{figures/stellar_corner_KepandK2.png}
   \caption{Low mass dwarf stellar samples from \kepler{} and \ktwo{.} Distributions of \kepler{} magnitudes,
     effective temperatures, stellar radii, and stellar masses for stars in our final stellar sample from either
     \kepler{} (\emph{blue histogram and markers}) or \ktwo{} (\emph{red histogram and markers}).}
@@ -395,18 +396,18 @@ measurement uncertainties and with a fractional precision on $P$ inflated to 20\
 
 \begin{figure*}
   \centering
-  %\includegraphics[width=\hsize]{figures/Ndetmap_map_Msgt0d0_xbin45_ybin27.png}%
+  \includegraphics[width=\hsize]{figures/Ndetmap_map_Msgt0d0_xbin45_ybin27.png}%
   \hspace{-\hsize}%
-  \begin{ocg}{fig:off4}{fig:off4}{0}%
+  \begin{ocg}{fig:offNd}{fig:offNd}{0}%
   \end{ocg}%
-  \begin{ocg}{fig:on4}{fig:on4}{1}%
-  %\includegraphics[width=\hsize]{figures/Ndetmap_kepk2_Msgt0d0_xbin45_ybin27.png}%
+  \begin{ocg}{fig:onNd}{fig:onNd}{1}%
+  \includegraphics[width=\hsize]{figures/Ndetmap_kepk2_Msgt0d0_xbin45_ybin27.png}%
   \end{ocg}
   \hspace{-\hsize}%
   \caption{(\emph{Interactive figure}) Empirical population of confirmed close-in planets around low mass stars.
     The distribution of 275 and 53 confirmed planets from \kepler{}
     and \ktwo{}
-    \ToggleLayer{fig:on4,fig:off4}{\protect\cdbox{(\emph{circles and diamonds} respectively)}}
+    \ToggleLayer{fig:onNd,fig:offNd}{\protect\cdbox{(\emph{circles and diamonds} respectively)}}
     as a function of orbital period, insolation, and planet radius. The two-dimensional maps are
     Monte-Carlo sampled from the measurement uncertainties on the planetary radii and insolations while 
     the fractional uncertainties on the orbital periods are inflated to
@@ -418,7 +419,7 @@ measurement uncertainties and with a fractional precision on $P$ inflated to 20\
 \input{Keplerplanettable}
 \input{K2planettable}
 
-The empirical planet popluation in \autoref{fig:Ndet} exhibits many recognizable features in the distribution of
+The empirical planet population in \autoref{fig:Ndet} exhibits many recognizable features in the distribution of
 planets orbiting low mass stars \citep[e.g.][]{morton14,dressing15a,gaidos16}. Namely, the dearth of planets with
 $r_p\gtrsim 2$ R$_{\oplus}$ at short orbital periods known as the Neptunian desert \citep{lundkvist16,mazeh16},
 the prominence of super-Earth and sub-Neptune-sized planets with orbital periods of a few to tens of days,
@@ -429,7 +430,7 @@ mass stars, the fact that a distinct valley is not visible in the empirical plan
 highlights the importance of measuring valley
 features from the completeness-corrected planet distribution. Alternatively, the valley---close to the expected rocky to non-rocky
 transition of $\sim 1.5-1.8$ R$_{\oplus}$ \citep{weiss14}---may not be entirely void of planets. Indeed there exists a
-signficant subset of confirmed planets between 1.5-1.8 R$_{\oplus}$ with periods out to $\sim 12$ days indicating that
+significant subset of confirmed planets between 1.5-1.8 R$_{\oplus}$ with periods out to $\sim 12$ days indicating that
 the mechanism responsible for producing the radius valley might not be as efficient as it is when operating on planetary
 systems around Sun-like stars.
 
@@ -485,7 +486,7 @@ are shown in \autoref{fig:senscurves}.
 
 \begin{figure}
   \centering
-  %\includegraphics[width=0.98\hsize]{figures/MES_SNR.png}
+  \includegraphics[width=0.98\hsize]{figures/MES_SNR.png}
   \caption{Correlation between the \kepler{} multi-event statistic and transit S/N. The mapping between the MES and
     S/N based on the synthetic planetary signals injected into the \kepler{} pipeline \citep{christiansen15}.
     The number-weighted powerlaw fit (\emph{solid line}) to the correlation differs slightly from a one-to-one relation
@@ -496,7 +497,7 @@ are shown in \autoref{fig:senscurves}.
 
 \begin{figure}
   \centering
-  %\includegraphics[width=0.98\hsize]{figures/senscurves.png}
+  \includegraphics[width=0.98\hsize]{figures/senscurves.png}
   \caption{Average detection sensitivity for \kepler{} and \ktwo{.} The \emph{solid curves} represent the
     average transiting planet detection sensitivity for the \kepler{} and \ktwo{} stars in our sample as
     a function of the transit S/N (Eq.~\ref{eq:snr}). The shaded regions mark the 16$^{th}$ and 84$^{th}$
@@ -527,7 +528,7 @@ curve from MAST for each star in our sample. We only consider light curves from 
 \texttt{ORION} input we supply the time sampling $\mathbf{t}$ in BJD, the corrected flux, and flux uncertainties
 in e$^-$/second, from the \texttt{EVEREST} keywords \texttt{TIME}, \texttt{FCOR}, and \texttt{FRAW\_ERR}.
 The duty cycle is derived by restricting to light curve measurements for which the \texttt{QUALITY} flag is zero.
-In light curves with known signals from planets or planet candidates, those signals are modele and removed from the
+In light curves with known signals from planets or planet candidates, those signals are modeled and removed from the
 light curve based on their reported transit parameters and using the \texttt{batman} \citep{kreidberg15} implementation
 of the \cite{mandel02} transit model. We then inject transiting planetary signals directly into the light curve
 by sampling planets from the linear transit S/N grid $\mathcal{U}(0,50)$. The per-system
@@ -565,7 +566,9 @@ the average detection sensitivity is significantly reduced compared to \kepler{.
 %sensitivity on the derived occurrence rates is discussed in Sect.~\ref{sect:occurrence}.
 The reduced sensitivity is due in-part to the imperfect corrections of the reduced pointing accuracy and
 to the limited time baseline of $\sim 80$ days in a typical \ktwo{} light curve compared to \kepler{.} 
-Furthermore, we have not attempted to optimize the performance of \texttt{ORION} on \ktwo{} light curves 
+Furthermore, \texttt{ORION} was originally developed for use on the 2-minute cadence data
+from the \tess{} mission. Here
+we have not attempted to optimize the performance of \texttt{ORION} on \ktwo{} light curves 
 beyond slight modifications to the algorithm's performance hyperparameters that were made to ensure the
 detection of 52/53 confirmed \ktwo{} planets. The planet K2-21c (EPIC 206011691.02, $P=15.5$ days)
 remains undetected by \texttt{ORION} because of the algorithm's requirement to discard putative signals
@@ -592,7 +595,7 @@ averaged over the index $n$, are shown in \autoref{fig:sensmap}.
 
 \begin{figure*}
   \centering
-  %\includegraphics[width=0.98\hsize]{figures/sensmap.png}
+  \includegraphics[width=0.98\hsize]{figures/sensmap.png}
   \caption{Average detection sensitivity versus orbital period and planetary radius.
     The detection sensitivity maps averaged over \kepler{} stars (\emph{left panel)} and over \ktwo{} stars
     (\emph{right panel}) from our sample of low mass dwarf stars.} 
@@ -619,7 +622,7 @@ shown in \autoref{fig:compmap}.
 
 \begin{figure*}
   \centering
-  %\includegraphics[width=0.98\hsize]{figures/compmap.png}
+  \includegraphics[width=0.98\hsize]{figures/compmap.png}
   \caption{Average completeness versus orbital period and planetary radius.
     Maps of the product of the detection sensitivity and geometric transit probability averaged over \kepler{} stars
     (\emph{left panel)} and over \ktwo{} stars (\emph{right panel}) from our sample of low mass dwarf stars.} 
@@ -694,26 +697,26 @@ occurrence rate of $2.83\pm 0.36$ planets per star.
 
 \begin{figure*}
   \centering
-  %\includegraphics[width=\hsize]{figures/fmap_bkgd_Msgt0d0_xbin39_ybin26.png}%
-  \hspace{-\hsize}%
+  \includegraphics[width=.9\hsize]{figures/fmap_bkgd_Msgt0d0_xbin39_ybin26.png}%
+  \hspace{-.9\hsize}%
   \begin{ocg}{fig:off3}{fig:off3}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on3}{fig:on3}{1}%
-  %\includegraphics[width=\hsize]{figures/fmap_kepk2_Msgt0d0_xbin39_ybin26.png}%
+  \includegraphics[width=.9\hsize]{figures/fmap_kepk2_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
-  \hspace{-\hsize}%
+  \hspace{-.9\hsize}%
   \begin{ocg}{fig:off1}{fig:off1}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on1}{fig:on1}{1}%
-  %\includegraphics[width=\hsize]{figures/fmap_curve_Msgt0d0_xbin39_ybin26.png}%
+  \includegraphics[width=.9\hsize]{figures/fmap_curve_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
-  \hspace{-\hsize}%
+  \hspace{-.9\hsize}%
   \begin{ocg}{fig:off4}{fig:off4}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on4}{fig:on4}{1}%
-  %\includegraphics[width=\hsize]{figures/fmap_planets_Msgt0d0_xbin39_ybin26.png}%
+  \includegraphics[width=.9\hsize]{figures/fmap_planets_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
-  \hspace{-\hsize}%
+  \hspace{-.9\hsize}%
   \caption{(\emph{Interactive figure}) Planet occurrence rate versus orbital period and planetary radius. The maximum a-posteriori occurrence
     rate map calculated from the population of confirmed planets from \kepler{} and
     \ktwo{} around low mass dwarf stars \ToggleLayer{fig:on3,fig:off3}{\protect\cdbox{(\emph{small circles and diamonds})}}.
@@ -783,7 +786,7 @@ $r_p\lesssim 1$ R$_{\oplus}$ where the detection sensitivity is poor.
   
 \begin{figure*}
   \centering
-  %\includegraphics[scale=.8]{figures/rphist_double.png}
+  \includegraphics[scale=.8]{figures/rphist_double.png}
   \caption{Occurrence rate of planets as a function of size. \emph{Upper panel}:
     histogram depicting the relative occurrence
     rate of close-in planets with orbital periods $<100$ days derived from the population of confirmed
@@ -873,7 +876,7 @@ for the remainder of this study.
 
 \begin{figure*}
   \centering
-  %\includegraphics[scale=.8]{figures/rphist_kruse.png}
+  \includegraphics[scale=.8]{figures/rphist_kruse.png}
   \caption{Comparison of occurrence rates with and without planet candidates included. \emph{Left panel}:
     same as \autoref{fig:rphist}. \emph{Right panel}: histogram depicting the relative occurrence
     rate of close-in planets with orbital periods $<100$ days derived from the population of confirmed
@@ -906,45 +909,44 @@ space yields $\text{d}r_p / \text{d}\log{P} = 0.085\pm 0.074$.
   \centering
   \includegraphics[width=0.85\hsize]{figures/fmapFmart_bkgd_Msgt0d0_xbin39_ybin26_insolation.png}%
   \hspace{-0.85\hsize}%
-  \begin{ocg}{fig:off1}{fig:off1}{0}%
+  \begin{ocg}{fig:off1F}{fig:off1F}{0}%
   \end{ocg}%
-  \begin{ocg}{fig:on1}{fig:on1}{1}%
+  \begin{ocg}{fig:on1F}{fig:on1F}{1}%
   \includegraphics[width=0.85\hsize]{figures/fmapFmart_kepk2_Msgt0d0_xbin39_ybin26_insolation.png}%
   \end{ocg}
   \hspace{-0.85\hsize}%
-  \begin{ocg}{fig:off2}{fig:off2}{0}%
+  \begin{ocg}{fig:off2F}{fig:off2F}{0}%
   \end{ocg}%
-  \begin{ocg}{fig:on2}{fig:on2}{1}%
+  \begin{ocg}{fig:on2F}{fig:on2F}{1}%
   \includegraphics[width=0.85\hsize]{figures/fmapFmart_slope_Msgt0d0_xbin39_ybin26_insolation.png}%
   \end{ocg}
   \hspace{-0.85\hsize}%
-  \begin{ocg}{fig:off3}{fig:off3}{0}%
+  \begin{ocg}{fig:off3F}{fig:off3F}{0}%
   \end{ocg}%
-  \begin{ocg}{fig:on3}{fig:on3}{1}%
+  \begin{ocg}{fig:on3F}{fig:on3F}{1}%
   \includegraphics[width=0.85\hsize]{figures/fmapFmart_models_Msgt0d0_xbin39_ybin26_insolation.png}%
   \end{ocg}
   \hspace{-0.85\hsize}%
-  \begin{ocg}{fig:off4}{fig:off4}{0}%
+  \begin{ocg}{fig:off4F}{fig:off4F}{0}%
   \end{ocg}%
-  \begin{ocg}{fig:on4}{fig:on4}{1}%
+  \begin{ocg}{fig:on4F}{fig:on4F}{1}%
   \includegraphics[width=0.85\hsize]{figures/fmapFmart_planets_Msgt0d0_xbin39_ybin26_insolation.png}%
   \end{ocg}
   \hspace{-0.85\hsize}%
-  %\includegraphics[trim=0cm 0 0 -4cm, width=.85\hsize]{figures_tmp/fmapF_martinez/fmapF_martinez001.png}
   \caption{(\emph{Interactive figure})
     Planet occurrence rates versus insolation and planet radius around low mass and Sun-like stars.
     \emph{Upper panel}: the maximum a-posteriori occurrence
     rate map calculated from the population of confirmed planets from \kepler{} and
     \ktwo{} around low mass dwarf stars
-    \ToggleLayer{fig:on1,fig:off1}{\protect\cdbox{(\emph{small circles and diamonds})}}.
+    \ToggleLayer{fig:on1F,fig:off1F}{\protect\cdbox{(\emph{small circles and diamonds})}}.
     Overplotted in black are
-    \ToggleLayer{fig:on3,fig:off3}{\protect\cdbox{model predictions}} of the transition from rocky to non-rocky
+    \ToggleLayer{fig:on3F,fig:off3F}{\protect\cdbox{model predictions}} of the transition from rocky to non-rocky
     planets in the following scenarios: core-powered mass loss \citep{gupta19b}, photoevaporation
     \citep{lopez18}, and gas-poor formation \cite{lopez18}. We measure the
-    \ToggleLayer{fig:on2,fig:off2}{\protect\cdbox{slope of the radius valley}}
+    \ToggleLayer{fig:on2F,fig:off2F}{\protect\cdbox{slope of the radius valley}}
     to be $\text{d}r_p / \text{d}\log{F} = -0.123\pm 0.054$ which is consistent with predictions
     from gas-poor formation of terrestrial planets. Also overplotted are
-    \ToggleLayer{fig:on4,fig:off4}{\protect\cdbox{planets}}
+    \ToggleLayer{fig:on4F,fig:off4F}{\protect\cdbox{planets}}
     with $\geq 3\sigma$ bulk density measurements from the literature that are classified as having either
     a rocky (\emph{circles}), a gaseous (\emph{triangles}), or an ambiguous (\emph{squares}) bulk
     composition. Marker colors are indicative of the MAP planet bulk densities.
@@ -984,7 +986,7 @@ an increasing transition radius with increasing insolation ($r_{p,\text{valley}}
 $r_{p,valley} \propto F^{0.10}$; \citealt{gupta19b} respectively).
 The negative slope of the radius valley around low mass stars differs in sign from the trend seen around
 Sun-like stars \citep[$\text{d}r_p / \text{d}\log{F} = +0.12$, $\text{d}r_p / \text{d}\log{P} = -0.11$]{martinez19}.
-The differing observational findings in each stellar mass regime may either be interpretted as
+The differing observational findings in each stellar mass regime may either be interpreted as
 a signature of distinct planet formation processes, wherein gas-poor planet formation is more prominent
 around low mass stars, or that the efficiency of atmospheric post processing weakens around lower mass stars.
 
@@ -1020,9 +1022,19 @@ M$_{\odot}$ (i.e. $\sim 62$\% of our confirmed planet sample).
 
 \begin{figure*}
   \centering
-  %\includegraphics[width=.98\hsize]{figures/rphist_compMs.png}
+  \includegraphics[width=.98\hsize]{figures/rphist_bkgd_compMs.png}%
+  \hspace{-.98\hsize}%
+  \begin{ocg}{fig:off4r}{fig:off4r}{0}%
+  \end{ocg}%
+  \begin{ocg}{fig:on4r}{fig:on4r}{1}%
+  \includegraphics[width=.98\hsize]{figures/rphist_kepk2_compMs.png}%
+  \end{ocg}
+  \hspace{-.98\hsize}%
   \caption{2D and 1D planet occurrence rates in various stellar mass bins. \emph{Top panels}: planet occurrence
-    rate maps as a function of orbital period and planet radius. \emph{Bottom panels}: distributions of the relative
+    rate maps as a function of orbital period and planet radius. Overplotted are the relevant subsets of the
+    population of confirmed planets from \kepler{} and
+    \ktwo{} \ToggleLayer{fig:on4r,fig:off4r}{\protect\cdbox{(\emph{small circles and diamonds})}}.
+    \emph{Bottom panels}: distributions of the relative
     planet occurrence rate as a function of planet radius. Note the differing occurrence rate scales.
     Each column corresponds to a unique cut in stellar masses
     which represent the full stellar sample ($M_s \in [0.08,0.93]$ M$_{\odot}$), the massive half of the stellar sample
@@ -1112,48 +1124,48 @@ rocky to non-rocky planets despite the latter being inherently rare around these
 
 \begin{figure*}
   \centering
-  %\includegraphics[width=\hsize]{figures/rpvMsFULL_KepK2_bkgd.png}%
-  \hspace{-\hsize}%
-  \begin{ocg}{fig:off4}{fig:off4}{0}%
+  \includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_bkgd.png}%
+  \hspace{-.97\hsize}%
+  \begin{ocg}{fig:off4M}{fig:off4M}{0}%
   \end{ocg}%
-  \begin{ocg}{fig:on4}{fig:on4}{1}%
-  %\includegraphics[width=\hsize]{figures/rpvMsFULL_KepK2_models.png}%
+  \begin{ocg}{fig:on4M}{fig:on4M}{1}%
+  \includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_models.png}%
   \end{ocg}
-  \hspace{-\hsize}%
-  \begin{ocg}{fig:off1}{fig:off1}{0}%
+  \hspace{-.97\hsize}%
+  \begin{ocg}{fig:off1M}{fig:off1M}{0}%
   \end{ocg}%
-  \begin{ocg}{fig:on1}{fig:on1}{1}%
-  %\includegraphics[width=\hsize]{figures/rpvMsFULL_KepK2_FP18.png}%
+  \begin{ocg}{fig:on1M}{fig:on1M}{1}%
+  \includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_FP18.png}%
   \end{ocg}
-  \hspace{-\hsize}%
-  \begin{ocg}{fig:off3}{fig:off3}{0}%
+  \hspace{-.97\hsize}%
+  \begin{ocg}{fig:off3M}{fig:off3M}{0}%
   \end{ocg}%
-  \begin{ocg}{fig:on3}{fig:on3}{1}%
-  %\includegraphics[width=\hsize]{figures/rpvMsFULL_KepK2_bin.png}%
+  \begin{ocg}{fig:on3M}{fig:on3M}{1}%
+  \includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_bin.png}%
   \end{ocg}
-  \hspace{-\hsize}%
-  \begin{ocg}{fig:off2}{fig:off2}{0}%
+  \hspace{-.97\hsize}%
+  \begin{ocg}{fig:off2M}{fig:off2M}{0}%
   \end{ocg}%
-  \begin{ocg}{fig:on2}{fig:on2}{1}%
-  %\includegraphics[width=\hsize]{figures/rpvMsFULL_KepK2_Ms.png}%
+  \begin{ocg}{fig:on2M}{fig:on2M}{1}%
+  \includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_Ms.png}%
   \end{ocg}
-  \hspace{-\hsize}%
+  \hspace{-.97\hsize}%
   \caption{(\emph{Interactive figure}) Evolution of the radius valley features with stellar mass. \emph{Solid markers}:
     the occurrence rate-weighted locations of the non-rocky planet peak (\emph{blue markers}), the
     radius valley (\emph{black markers}) and the rocky planet peak (\emph{red markers})
     as a function of host stellar mass. Measurements around Sun-like stars with $M_s>0.8$ M$_{\odot}$ are
-    retrieved from \cite{fulton18} \ToggleLayer{fig:on1,fig:off1}{\protect\cdbox{(\emph{open circles})}}.
+    retrieved from \cite{fulton18} \ToggleLayer{fig:on1M,fig:off1M}{\protect\cdbox{(\emph{open circles})}}.
     Feature radii from our full sample with a median value of
     $M_s = 0.651^{+0.058}_{-0.096}$ M$_{\odot}$ are depicted as
-    \ToggleLayer{fig:on2,fig:off2}{\protect\cdbox{\emph{filled circles}}}.
-    \ToggleLayer{fig:on3,fig:off3}{\protect\cdbox{\emph{Filled squares}}}
+    \ToggleLayer{fig:on2M,fig:off2M}{\protect\cdbox{\emph{filled circles}}}.
+    \ToggleLayer{fig:on3M,fig:off3M}{\protect\cdbox{\emph{Filled squares}}}
     depict the feature radii from partitioning our stellar sample into three $M_s$ bins: $M_s \in [0.65,0.93]$ M$_{\odot}$,
     $M_s \in [0.08,0.65]$ M$_{\odot}$, and $M_s \in [0.08,0.42]$ M$_{\odot}$. Markers in each stellar mass bin are slightly
     offset along the $M_s$ axis to assist in visualizing the errorbars. Uncertainties on the
     peak and valley locations are derived by sampling the measured occurrence rates and their uncertainties along
     with samples of the hyperparameters controlling map smoothing, minimum detection sensitivity, planet parameter
     binning, and the assumed feature ranges in $P$ and $r_p$. The
-    \ToggleLayer{fig:on4,fig:off4}{\protect\cdbox{\emph{green curves}}}
+    \ToggleLayer{fig:on4M,fig:off4M}{\protect\cdbox{\emph{green curves}}}
     represent theoretical predictions for the evolution of the radius valley with stellar mass based on
     physical models of gas-poor terrestrial planet formation (\emph{dotted}; \citealt{lopez18}),
     core-powered atmospheric mass loss
@@ -1177,8 +1189,8 @@ is indicative of the effective disappearance of non-rocky planets around increas
 (see \autoref{fig:rphistcomp}) while terrestrial-sized planets appear to persist.
 Furthermore, the reduced slope of the rocky peak may be evidence for
 a characteristic planetary core size of $\approx 1$ R$_{\oplus}$ although its exact location is largely uncertain
-due to the limited detection sensitivity to sub-Earth-sized planets. Furthermore, the probablistic classification
-of rocky planets as being primoridally rocky or an evaporated core requires additional information
+due to the limited detection sensitivity to sub-Earth-sized planets. Furthermore, the probabilistic classification
+of rocky planets as being primordially rocky or an evaporated core requires additional information
 about the planet's orbit and stellar host properties \citep{neil19b}. 
 For example, typical core sizes may be $M_s$-dependent
 as a core size for a fixed core mass is composition dependent and the mass of heavy elements per star
@@ -1196,7 +1208,7 @@ a steep $\text{d}r_{p,\text{valley}} / \text{d}M_s$ slope although we are
 unable to distinguish between competing physical models given the measurement uncertainties.
 Fortunately, the model predictions continue to diverge
 with decreasing stellar mass such that measurements of the valley location in decreasing $M_s$ bins may be used to
-rule out the operation of certain physical mechanisms in the low stellar mass regime. Athough the trend of decreasing
+rule out the operation of certain physical mechanisms in the low stellar mass regime. Although the trend of decreasing
 feature radii with decreasing stellar mass appears to be upheld, the poor counting statistics in the reduced
 $M_s$ bins prevent any significant inference regarding the relative strength of the competing physical mechanisms.
 This problem can only be addressed by increasing the number of mid-to-late M dwarfs in transit surveys and by maximizing
@@ -1215,7 +1227,7 @@ that are equally complete on either side of the radius valley, it is critically 
 of the transition between rocky and non-rocky planets is known. In our full stellar sample, which includes
 mid-to-late K dwarfs, the radius valley is centered at $1.54\pm 0.16$ R$_{\oplus}$. Although we remind the
 reader that the exact value is dependent on the planet's separation (see \autoref{fig:fmapF}). A consistent value of
-$1.55^{+0.52}_{-0.50}$ is also recovered---albeit with reduced signficance---around stars later than about M2.5V.
+$1.55^{+0.52}_{-0.50}$ is also recovered---albeit with reduced significance---around stars later than about M2.5V.
 This value is slightly lower than the valley locations measured around Sun-like stars of
 $\sim 1.9$ R$_{\oplus}$ for $M_s \sim 1.2$ M$_{\odot}$ and $\sim 1.7$ R$_{\oplus}$ for $M_s \sim 0.85$ M$_{\odot}$
 \citep{fulton18}.
@@ -1268,16 +1280,37 @@ intersect at $P\sim 23.52$ days such that two regions of interest emerge and are
 
 \begin{figure}
   \centering
-  %\includegraphics[width=0.99\hsize]{figures/fmapregion_Msgt0d0_xbin39_ybin26.png}
+  \includegraphics[width=\hsize]{figures/fmapregion_bkgd_Msgt0d0_xbin39_ybin26.png}%
+  \hspace{-\hsize}%
+  \begin{ocg}{fig:off4pr}{fig:off4pr}{0}%
+  \end{ocg}%
+  \begin{ocg}{fig:on4pr}{fig:on4pr}{1}%
+  \includegraphics[width=\hsize]{figures/fmapregion_slope_Msgt0d0_xbin39_ybin26.png}%
+  \end{ocg}
+  \hspace{-\hsize}%
+  \begin{ocg}{fig:off1pr}{fig:off1pr}{0}%
+  \end{ocg}%
+  \begin{ocg}{fig:on1pr}{fig:on1pr}{1}%
+  \includegraphics[width=\hsize]{figures/fmapregion_planets_Msgt0d0_xbin39_ybin26.png}%
+  \end{ocg}
+  \hspace{-\hsize}%
+  \begin{ocg}{fig:off3pr}{fig:off3pr}{0}%
+  \end{ocg}%
+  \begin{ocg}{fig:on3pr}{fig:on3pr}{1}%
+  \includegraphics[width=\hsize]{figures/fmapregion_tois_Msgt0d0_xbin39_ybin26.png}%
+  \end{ocg}
+  \hspace{-\hsize}%
   \caption{Regions of interest for resolving the transition between rocky and non-rocky planets
     around low mass stars. The colormap depicts the occurrence rate of small close-in planets from
     \autoref{fig:fmap}. The rocky to non-rocky transition measured in this work is highlighted
     by the \emph{solid black line}. The transition measured around FGK stars from \cite{martinez19}
     is highlighted by the \emph{dashed black line} after being scaled to the median stellar mass of
-    our sample. The shaded regions bounded by
+    our sample. The \ToggleLayer{fig:on4pr,fig:off4pr}{\protect\cdbox{shaded regions}} bounded by
     these curves represent the subset of the $P-r_p$ parameter space of interest for resolving
-    the transition around low mass stars from precise bulk density measurements. The eleven TOIs
-    that fall within this region are marked by an `x'. Also overplotted are planets
+    the transition around low mass stars with precise bulk density measurements. The eleven
+    \ToggleLayer{fig:on3pr,fig:off3pr}{\protect\cdbox{TOIs}}
+    that fall within this region are marked by an `x'. Also overplotted are
+    \ToggleLayer{fig:on1pr,fig:off1pr}{\protect\cdbox{planets}}
     with $\geq 3\sigma$ bulk density measurements from the literature that are classified as having either
     a rocky (\emph{circles}), a gaseous (\emph{triangles}), or an ambiguous (\emph{squares}) bulk
     composition. Marker colors are indicative of the MAP planet bulk densities.}
@@ -1292,7 +1325,7 @@ transiting planet searches and secondly, by quantifying the detection sensitivit
 NASA's Transiting Exoplanet Survey Satellite \citep[\tess{;}][]{ricker15} is expected to provide hundreds of new transiting
 planet discoveries in the vicinity of the radius valley \citep{barclay18}. \tess{} is particularly well-suited to the discovery of
 close-in planets around low mass stars down to M5V ($M_s\sim 0.16$ M$_{\odot}$) due to its red bandpass (600-1000 nm)
-and its high cadence (2 minute) observations of 200,000-400,000 stars over $\sim 94$\% of the sky by the completion of its
+and its high cadence (2-minute) observations of 200,000-400,000 stars over $\sim 94$\% of the sky by the completion of its
 recently approved extended mission.
 
 The \tess{} primary mission---lasting one year---has been ongoing since July 2018. 
@@ -1303,9 +1336,9 @@ by \tess{} to enable robust conclusions regarding the nature of the emergence of
 proceed by noting that the measurement uncertainty on the feature locations from binomial statistics scales as
 $\sqrt{N_sP(1-P)}$ where $N_s$ is the number of observed stars and $P$ is the probability of detecting a planet close to
 the radius valley 
-given the detection sensitvity, the transit proability, and their inherent rate of occurrence (see Eq.~\ref{eq:prob}).
+given the detection sensitivity, the transit probability, and their inherent rate of occurrence (see Eq.~\ref{eq:prob}).
 Through sectors 1-14, \tess{} has observed $N_{s,\text{TESS}} = 23,051$ stars less massive than 0.4 M$_{\odot}$
-with 2 minute cadence from its Candidate Target List \citep[CTL;][]{stassun19}.
+with 2-minute cadence from its Candidate Target List \citep[CTL;][]{stassun19}.
 Among these stars, the SPOC has reported three objects of interest close to the radius valley
 between $1.4-1.6$ R$_{\oplus}$\footnote{TOIs: 175.01, 406.01, and 667.01.}. 
 Assuming a 0\% false positive rate
@@ -1314,19 +1347,19 @@ among these planet candidates, and the same MAP occurrence rate measured with \k
 spanning the radius valley around a star with $M_s<0.4$ M$_{\odot}$ to be 
 $P_{\text{valley,TESS}}=1.30 \times 10^{-4}$. We can compare these numbers to the \kepler{} values of $N_{s,\text{Kep}}=33$ and
 $P_{\text{valley,Kep}}=8.56\times 10^{-3}$ to scale the uncertainty on $f_{\text{valley}}$---and hence on the radius
-valley location---as an increasing number of mid-to-late M dwarfs are observed with 2 minute cadence with \tess{.}
+valley location---as an increasing number of mid-to-late M dwarfs are observed with 2-minute cadence with \tess{.}
 
 The resulting improvement in the measurement precision of the radius valley with observations of additional mid-to-late
 M dwarfs is shown in \autoref{fig:improve}.
 The \tess{} curve reveals how precisely the location of the radius valley can be measured given \tess{'s} approximate 
-detection sensivity to planets spanning the radius valley and as the number of low mass stars observed with 2 minute
-cadence is increased. Note that the improvement allotted by \tess{} should only be interpretted as an
+detection sensitivity to planets spanning the radius valley and as the number of low mass stars observed with 2-minute
+cadence is increased. Note that the improvement allotted by \tess{} should only be interpreted as an
 approximation given that its detection sensitivity has not yet been adequately characterized. In our calculations, the
 \tess{} detection sensitivity is estimated as a constant value as described in the preceding paragraph. 
 
 \begin{figure*}
   \centering
-  %\includegraphics[width=0.98\hsize]{figures/rpuncertainty_TESSv2.png}
+  \includegraphics[width=0.98\hsize]{figures/rpuncertainty_TESSv2.png}
   \caption{Expected improvement in the measurement precision of the radius valley location with the number of observed
     low mass stars. Measurement precision curves of the upper and lower uncertainties on the location of the radius valley 
     are derived from binomial statistics. These calculations use approximate and expected detection sensitivity
@@ -1344,16 +1377,16 @@ approximation given that its detection sensitivity has not yet been adequately c
 We define a target measurement precision as that which is required to distinguish between predictions from photoevaporation
 and core-powered mass loss (assuming an empirical mass-luminosity relation) at $3\sigma$ around low mass stars with a median
 stellar mass of 0.35 M$_{\odot}$. Based on the model curves in \autoref{fig:rpvMs},
-this required precision corresponds to a radius vally uncertainty of $\sim 0.12$ R$_{\oplus}$. A very similar level
+this required precision corresponds to a radius valley uncertainty of $\sim 0.12$ R$_{\oplus}$. A very similar level
 of precision would be required to distinguish between photoevaporation and gas-poor formation as well.
 The approximate \tess{} detection sensitivity implies that \tess{} will be required to observe $\sim 85,000$ mid-to-late M dwarfs
 to distinguish between model predictions of photoevaporation and core-powered mass loss or gas-poor formation at $3\sigma$.
-At the time of writing, only 23,051 such stars have been targeted with 2 minute cadence. Extrapolating to the end of \tess{'s}
-primary mission, we expect a total of $\sim 42,000$ such stars to be observed with 2 minute cadence. If the \tess{} detection
+At the time of writing, only 23,051 such stars have been targeted with 2-minute cadence. Extrapolating to the end of \tess{'s}
+primary mission, we expect a total of $\sim 42,000$ such stars to be observed with 2-minute cadence. If the \tess{} detection
 sensitivity is well-characterized by that time and is roughly consistent with the approximate value assumed here, then \tess{}
 could achieve a radius valley uncertainty of $\sim 0.17$ R$_{\oplus}$ by the end of its prime mission.
 This would still be useful for constraining radius valley formation models as predictions from photoevaporation and
-core-powered mass loss---or gas-poor formation---could be distingiushed at $\sim 2.1\sigma$ with this level of precision.
+core-powered mass loss---or gas-poor formation---could be distinguished at $\sim 2.1\sigma$ with this level of precision.
 Note that these calculations do not include non-CTL stars that may be targeted in the 30 minute \tess{} Full Frame Images
 and could also contribute to the occurrence rate measurements, albeit with a reduced detection sensitivity.
 
@@ -1364,13 +1397,13 @@ of the radius valley could have been precisely measured with $\sim 1200$ observe
 
 The stellar input catalog for the up-coming ESA \plato{} mission \citep{rauer14} has yet to be defined. The primary goal
 of \plato{} is to detect and characterize transiting habitable zone planets around bright FGK stars. Despite this,
-according to the mission's Defintion Study
+according to the mission's Definition Study
 Report\footnote{\url{https://sci.esa.int/web/plato/-/59252-plato-definition-study-report-red-book}}, a subset of 
 the PLATO Input Catalog (PIC) known as sample P4 will target $\geq 5000$ M dwarfs brighter than $V=16$ as part of
 the mission's Long-Duration Observing Phase (LOP) lasting a minimum of two years. Furthermore, the expected random
 noise in P4 is 800 ppm on one hour timescales. To compute the probability of
 detecting a radius valley planet around a mid-to-late M dwarf targeted by \plato{,} we first assume that for a given
-transit S/N, \plato{'s} detection sensivity will be equivalent to that of \kepler{} (\autoref{fig:senscurves}).
+transit S/N, \plato{'s} detection sensitivity will be equivalent to that of \kepler{} (\autoref{fig:senscurves}).
 We fix the transit S/N
 (Eq.~\ref{eq:snr}) of a radius valley planet orbiting a mid-M dwarf using the values $r_p=1.5$ R$_{\oplus}$, $R_s=0.35$
 R$_{\odot}$, $M_s=0.35$ M$_{\odot}$, CDPP$_{1\text{ hr}}=800$ ppm, and $n_{\text{transits}}=73$ for stars in the LOP observing
@@ -1387,10 +1420,10 @@ if very rough and not binding to the final definition of the PIC, we combine thi
 in the solar neighborhood to estimate the number of mid-to-late M dwarfs in the P4 sample. We do so by retrieving
 the M dwarf sample within 25 pc from \cite{winters19}. Noting that this volume-limited sample is $\sim 33$\% complete
 (J. Winters private communication), we identify $\sim 2829$ M dwarfs within 25 pc and with $V<16$.
-We then scale up the M dwarf population beyond 25 pc until 5000 stars with $V<16$ are included assuming a homogenous M
+We then scale up the M dwarf population beyond 25 pc until 5000 stars with $V<16$ are included assuming a homogeneous M
 dwarf population beyond 25 pc. Of those stars representing probable targets within the P4 sample, 3358 have masses
 $<0.4$ M$_{\odot}$. With this many mid-to-late M dwarfs targeted by \plato{} we expect the radius valley uncertainty
-to reach $\sim 0.14$ R$_{\oplus}$ which would enable models of photoevaporation is be distrignshed from models of
+to reach $\sim 0.14$ R$_{\oplus}$ which would enable models of photoevaporation is be distinguished from models of
 core-powered mass low or gas-poor formation at $\sim 2.6\sigma$.
 
 
@@ -1453,18 +1486,18 @@ using data from the \kepler{} and \ktwo{} transit surveys. Our main findings are
   twice that of the rocky peak's slope indicating that the planet population in each stellar mass bin
   tends to converge towards rocky planet cores of $\sim 1$ R$_{\oplus}$ around later spectral types.
 \item Robust inferences to distinguish between various proposed physical mechanisms for the formation of the
-  radius valley are expected to require $\mathcal{O}(85,000)$ mid-M dwarfs observed with 2 minute cadence with
+  radius valley are expected to require $\mathcal{O}(85,000)$ mid-M dwarfs observed with 2-minute cadence with
   \tess{} or $\mathcal{O}(4700)$ mid-M dwarfs observed with \plato{} based on its expected performance and
   observing strategy.
 \item We advocate that transiting planets around stars with \teff{} $<4700$ K, and whose orbital periods and radii are
   situated between model predictions of the location of the rocky to non-rocky transition (see \autoref{fig:transition}),
-  should be targeted by RV campaigns to resolve the location and slope of this transition from precise bulk density
+  should be targeted by RV campaigns to resolve the location and slope of this transition with precise bulk density
   measurements. 
 \end{itemize}
 
 
 \acknowledgements
-We thank Martin Paegert for his efforts in contributing relevent data to and for his assistance in querying the \tess{}
+We thank Martin Paegert for his efforts in contributing relevant data to and for his assistance in querying the \tess{}
 CTL database. We also thank Jennifer Winters and Jonathan Irwin for discussions regarding the population of nearby
 M dwarfs. We also thank Sam Quinn for discussions regarding past results from the \ktwo{} mission.
 We thank the Canadian Institute for Theoretical Astrophysics for use of the Sunnyvale computing cluster
