about to modify text based on DC comments

--- a/radvalley.tex
+++ b/radvalley.tex
@@ -91,15 +91,16 @@ of Toronto, 50 St. George Street, Toronto, ON, M5S 3H4, Canada}
 
 
 \begin{abstract}
-  Recent observational studies have revealed a prominent gap in the occurrence rate
-  of close-in planet radii around Sun-like stars.
-  Resolving the so-called radius valley around low mass stars can provide valuable
-  constraints on the physical mechanisms that sculpt the valley and so far have been largely limited
-  by relatively poor counting statistics.
+  %Recent observational studies have revealed a prominent gap in the occurrence rate
+  %of close-in planet radii around Sun-like stars.
+  %Resolving the so-called radius valley around low mass stars can provide valuable
+  %constraints on the physical mechanisms that sculpt the valley and so far have been largely limited
+  %by relatively poor counting statistics.
   Here we calculate the occurrence rate of small close-in planets around low mass dwarf stars
   using the known planet populations from the \kepler{} and \ktwo{} missions while
   exploiting the \gaia{} DR2 data to refine the stellar parameters. 
-  The application of appropriate completeness corrections %to the empirical planet population
+  The application of %appropriate
+  completeness corrections %to the empirical planet population
   clearly reveals the radius valley in the maximum a-posteriori occurrence rates as a
   function of orbital separation and planet radius. The slope of the valley with orbital separation
   bears the opposite sign from that measured around Sun-like stars suggesting that
@@ -117,6 +118,29 @@ of Toronto, 50 St. George Street, Toronto, ON, M5S 3H4, Canada}
     that should be targeted in radial velocity surveys to resolve the rocky to non-rocky transition
     around low mass stars.}  
 \end{abstract}
+
+
+  Here we calculate the occurrence rate of small close-in planets around low mass dwarf stars
+  using the known planet populations from the \kepler{} and \ktwo{} missions while
+  exploiting the \gaia{} DR2 data to refine the stellar parameters. 
+  The application of %appropriate
+  completeness corrections %to the empirical planet population
+  clearly reveals the radius valley in the maximum a-posteriori occurrence rates as a
+  function of orbital separation and planet radius. The slope of the valley with orbital separation
+  bears the opposite sign from that measured around Sun-like stars suggesting that
+  thermally driven atmospheric mass loss may not dominate the evolution of planets in the low stellar mass
+  regime or that we are witnessing the emergence of a separate channel of planet formation.
+  The latter notion is supported by the relative occurrence of rocky to non-rocky planets
+  which increases from $0.5\pm 0.1$ to $8.5\pm 4.6$ from mid-K to mid-M dwarfs.
+  Furthermore, the location of the radius valley features are shown to shift to smaller sizes with
+  decreasing stellar mass in agreement with physical models of photoevaporation,
+  core-powered mass loss, and gas-poor formation. %Although current measurements are
+  %insufficient to robustly identify the dominant formation pathway of the radius valley,
+  %such inferences may be obtained by \tess{} with $\mathcal{O}(85,000)$
+  %mid-to-late M dwarfs observed with 2-minute cadence.
+  \textbf{The measurements presented herein precisely indicate the subset of planetary orbital periods and radii
+    that should be targeted in radial velocity surveys to resolve the rocky to non-rocky transition
+    around low mass stars.}  
 
 
 \section{Introduction}
@@ -1502,10 +1526,17 @@ CTL database. We also thank Jennifer Winters and Jonathan Irwin for discussions 
 M dwarfs. We also thank Sam Quinn for discussions regarding past results from the \ktwo{} mission.
 We thank the Canadian Institute for Theoretical Astrophysics for use of the Sunnyvale computing cluster
 throughout the early stages of this work. RC was supported by the Natural Sciences and Engineering Research Council of
-Canada and the NASA ??. 
-
+Canada and a grant from the National Aeronautics and Space Administration in support of the \tess{} science mission.
 
 \bibliographystyle{apj}
 \bibliography{refs}
 
 \end{document}
+
+
+% what does it mean to measure the valley location 
+
+% change characterization of planet dispositions from bulk density to whether or not the planet is above or below the 70%rock - 30% iron curve in MR space  
+
+% derive the K2 occurrence rate around mid-K and M dwarfs from Kruse sample of PCs and compare it to their results from Kepler to show
+% that hoepfully they're the same
